force-app/main/default/objects/Rpl_Training_Assement_Result__c/Rpl_Training_Assement_Result__c.object-meta.xml
<CustomObject>
    <label>Training Assessment Results</label>
    <nameField>
        <displayFormat>RTAS-{000000}</displayFormat>
        <label>Training Assessment Result No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Assessment Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>