force-app/main/default/objects/Rpl_Training_Assement_Result__c/fields/Rpl_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Assessment_Date__c</fullName>
    <label>Assessment Date</label>
    <type>Date</type>
</CustomField>