force-app/main/default/objects/Rpl_Training_Assement_Result__c/fields/Rpl_Marks_Scored__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Marks_Scored__c</fullName>
    <label>Marks Scored</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>