force-app/main/default/objects/Rpl_Training_Assement_Result__c/fields/Rpl_Percentages_Scored__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Percentages_Scored__c</fullName>
    <formula>(Rpl_Marks_Scored__c  /  Rpl_Total_marks__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentages Scored</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>