force-app/main/default/objects/Rpl_Training_Assement_Result__c/fields/Rpl_Student__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Student__c</fullName>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Assessment Results</relationshipLabel>
    <relationshipName>Training_Assessment_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>