force-app/main/default/objects/Rpl_Training_Assement_Result__c/fields/Rpl_Subject__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Subject__c</fullName>
    <label>Subject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>