force-app/main/default/objects/Rpl_Training_Assement_Result__c/fields/Rpl_Topic__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Topic__c</fullName>
    <label>Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>