force-app/main/default/objects/Rpl_Training_Assement_Result__c/fields/Rpl_Total_marks__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Total_marks__c</fullName>
    <label>Total marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>