force-app/main/default/objects/Rpl_Training_Assement_Result__c/fields/Rpl_Training_Module__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Training_Module__c</fullName>
    <label>Training Module</label>
    <referenceTo>Rpl_Training_Module__c</referenceTo>
    <relationshipLabel>Training Assessment Results</relationshipLabel>
    <relationshipName>Training_Assessment_Results</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>