force-app/main/default/objects/Rpl_Training_Assement_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rpl_Assessment_Date__c</columns>
    <columns>Rpl_Percentages_Scored__c</columns>
    <columns>Rpl_Student__c</columns>
    <columns>Rpl_Subject__c</columns>
    <columns>Rpl_Topic__c</columns>
    <columns>Rpl_Training_Module__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>